# agy-switch

./: .gitignore  Cargo.toml  README.md  add-to-path.ps1  install.ps1
.github/workflows/: build-all.yml  build-macos.yml
src/: cli.rs  clipboard.rs  config.rs  daemon.rs  error.rs  http.rs  main.rs
src/auth/: mod.rs  oauth_flow.rs  pkce.rs  token_refresh.rs
src/commands/: account_add.rs  account_export.rs  account_list.rs  account_remove.rs  account_use.rs  dashboard.rs  mod.rs  on_off.rs
src/quota/: fetcher.rs  mod.rs  models.rs
src/store/: account.rs  active_writer.rs  file_store.rs  mod.rs
