[package]
name = "agy-switch"
version = "0.1.0"
edition = "2024"
authors = ["AGY-SWITCH Contributors"]
description = "Antigravity account monitor and switcher CLI"
license = "MIT"
repository = "https://github.com/xyzyt010/agy-switch"

[[bin]]
name = "agy-switch"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env", "string"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# HTTP (pure-Rust TLS — no OpenSSL needed for cross-compilation)
reqwest = { version = "0.12", default-features = false, features = [
    "json", "rustls-tls", "stream"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Platform directories
dirs = "5"

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"

# Terminal colors
colored = "2"

# PKCE crypto
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Open URLs in browser
open = "5"

# URL encoding
urlencoding = "2.1.3"

# Unix process management
[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2"



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
